examples/test/testpolicy4974.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4974
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key49: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value33
          key42: value34
          key8: value37
      podSelector:
        matchLabels:
          key48: value46
          key33: value19
          key8: value31
